--- a/corso/Guerrini/GestioneScuola/src/main/java/com/mycompany/gestionescuola/WinGestioneCorso.form
+++ b/corso/Guerrini/GestioneScuola/src/main/java/com/mycompany/gestionescuola/WinGestioneCorso.form
@@ -44,7 +44,6 @@
                           <Component id="lblTitolo" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="btnupdatecorso" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="1" attributes="0">
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -128,9 +127,9 @@
                   <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnPrepNewCorso" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnCreaCorso" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnPrepNewCorso" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
               <Component id="lblmsg" min="-2" pref="23" max="-2" attributes="0"/>
