--- a/corso/Domenici/GestioneScuola/src/main/java/com/mycompany/gestionescuola/WinDialogAnagrafica.form
+++ b/corso/Domenici/GestioneScuola/src/main/java/com/mycompany/gestionescuola/WinDialogAnagrafica.form
@@ -46,7 +46,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="txNome" alignment="0" max="32767" attributes="0"/>
                               <Component id="txCognome" alignment="0" pref="234" max="32767" attributes="0"/>
-                              <Component id="txMail" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txPv" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -82,7 +82,7 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txMail" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txPv" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -162,7 +162,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txCognome">
     </Component>
-    <Component class="javax.swing.JTextField" name="txMail">
+    <Component class="javax.swing.JTextField" name="txPv">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -176,7 +176,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Mail:"/>
+        <Property name="text" type="java.lang.String" value="Pv:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnConferma">
