--- a/corso/Guerrini/html/HTML5Application/public_html/css/style.css
+++ b/corso/Guerrini/html/HTML5Application/public_html/css/style.css
@@ -6,7 +6,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
     Created on : 31 mar 2022, 14:32:00
     Author     : tss
 */
-
+*{
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+    outline: 0px;
+    border-collapse: collapse;
+    box-sizing: border-box;
+    letter-spacing: 0px;
+    font-family: verdana;
+}
+div{
+    font-family: sansation;
+    padding: 5px;
+    }
+    form{
+        font-family: sansation;
+    }
 h1{
     color:#494b7e;
     text-align: center;
