--- a/corso/Guerrini/html/HTML5Application/public_html/css/style.css
+++ b/corso/Guerrini/html/HTML5Application/public_html/css/style.css
@@ -23,13 +23,14 @@ div{
     form{
         font-family: sansation;
     }
+    
 h1{
     color:#494b7e;
     text-align: center;
 }
 
 #titolo{
-    font-family: Verdana;
+    font-family: Sacramento;
 }
 .sfondoy{
     background-color: yellow;
